--- a/index.html
+++ b/index.html
@@ -1,279 +1,128 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TichaAfrica – Teachers Leading Africa’s AI Education</title>
-  <meta name="description" content="TichaAfrica empowers teachers to lead Africa’s AI education revolution. Join the alliance shaping an inclusive, human-first future for learning." />
-
-  <!-- Favicon -->
-  <link rel="icon" href="images/TichaAfrica_Favicon.png" type="image/png">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>TichaAfrica — Teach Smart, Lead Change</title>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --navy: #003366;
-      --leaf: #2e9a4d;
-      --gold: #ffd700;
-      --muted: #f8f9fa;
-      --white: #ffffff;
-      --text: #003366;
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: var(--text);
-      background: var(--white);
-      line-height: 1.6;
-    }
-
-    h2, h3 {
-      font-family: 'Poppins', sans-serif;
-    }
-
-    header {
-      background: var(--white);
-      padding: 20px;
-      border-bottom: 2px solid var(--leaf);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-
-    .logo-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-
-    header img {
-      height: 70px;
-    }
-
-    .slogan {
-      font-size: 0.8rem;
-      font-style: italic;
-      color: var(--gold);
-      margin-top: 5px;
-      text-align: center;
-      text-shadow: 1px 1px 0 #ccc, 2px 2px 0 #999;
-    }
-
-    nav a {
-      margin: 0 12px;
-      color: var(--leaf);
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      color: var(--gold);
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--navy), var(--leaf));
-      color: var(--white);
-      text-align: center;
-      padding: 80px 20px;
-    }
-
-    .hero img {
-      max-width: 100%;
-      height: auto;
-      margin-top: 20px;
-      border-radius: 10px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-    }
-
-    .btn {
-      display: inline-block;
-      background: var(--gold);
-      color: var(--navy);
-      padding: 16px 32px;
-      border-radius: 40px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      box-shadow: 0 6px #b89f00;
-    }
-
-    .btn:hover {
-      background: #e6c200;
-      transform: translateY(-3px);
-      box-shadow: 0 8px #a68b00;
-    }
-
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    section[data-animate] {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.8s ease-out;
-    }
-
-    section[data-animate].visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .alliance-benefits {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      margin: 30px 0;
-    }
-
-    .benefit-card {
-      background: var(--muted);
-      padding: 20px;
-      border-radius: 12px;
-      text-align: center;
-      font-weight: 500;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
-    }
-
-    .benefit-card:hover {
-      transform: translateY(-5px) scale(1.03);
-      box-shadow: 0 12px 20px rgba(0,0,0,0.15);
-    }
-
-    footer {
-      background: var(--navy);
-      color: var(--white);
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-
-    footer a {
-      color: var(--gold);
-      text-decoration: none;
-    }
-
-    /* Floating buttons */
-    .floating-buttons {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      z-index: 1000;
-    }
-
-    .floating-buttons a {
-      background: var(--leaf);
-      color: var(--white);
-      padding: 12px 18px;
-      border-radius: 40px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
-      transition: transform 0.3s ease;
-    }
-
-    .floating-buttons a:hover {
-      background: var(--gold);
-      color: var(--navy);
-      transform: translateY(-3px);
-    }
+    body {font-family: 'Inter', Arial, sans-serif; background: #f8f9fa; color: #003366; margin:0; overflow-x:hidden; line-height:1.6;}
+    header {background: white; padding: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 10;}
+    header img {height: 70px; transition: transform 0.5s ease;}
+    header img:hover {transform: scale(1.1) rotate(5deg);}
+    .hero {background: linear-gradient(135deg, #003366 0%, #2e9a4d 100%); color: white; text-align: center; padding: 140px 20px 100px; position:relative; overflow:hidden;}
+    .hero::before {content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="25" cy="25" r="1" fill="white" opacity="0.1"/><circle cx="75" cy="75" r="1" fill="white" opacity="0.1"/></pattern></defs><rect width="100" height="100" fill="url(%23grain)"/></svg>'); opacity: 0.05;}
+    .hero h1 {font-size: clamp(2rem, 5vw, 3.5rem); margin:0; line-height:1.1; text-shadow: 0 2px 4px rgba(0,0,0,0.3);}
+    .motto {font-size: clamp(1.5rem, 4vw, 2.4rem); font-weight: 900; color: #ffd700; margin: 20px 0; text-shadow: 0 2px 4px rgba(0,0,0,0.3); animation: glow 2s ease-in-out infinite alternate;}
+    @keyframes glow {from {text-shadow: 0 0 5px #ffd700;} to {text-shadow: 0 0 20px #ffd700, 0 0 30px #ffd700;}}
+    .btn {display: inline-block; padding: 18px 40px; background: #ffd700; color: #003366; font-weight: bold; border-radius: 50px; text-decoration: none; margin: 15px; font-size: 1.3rem; box-shadow: 0 8px 25px rgba(255,215,0,0.4); transition: all 0.4s ease; position: relative; overflow: hidden;}
+    .btn::before {content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent); transition: left 0.5s;}
+    .btn:hover::before {left: 100%;}
+    .btn:hover {transform: translateY(-8px) scale(1.05); box-shadow: 0 20px 40px rgba(255,215,0,0.5);}
+    .btn-secondary {background: rgba(255,255,255,0.2); color: white; border: 3px solid #ffd700; backdrop-filter: blur(10px);}
+    .urgency {background: linear-gradient(90deg, #ffd700 0%, #2e9a4d 100%); color: #003366; padding: 18px; text-align: center; font-weight: bold; font-size: 1.3rem; animation: pulse 2s infinite; box-shadow: 0 4px 10px rgba(0,0,0,0.1);}
+    @keyframes pulse {0%,100%{transform:scale(1);} 50%{transform:scale(1.02);}}
+    section {max-width: 1000px; margin: 60px auto; padding: 40px; background: white; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);}
+    h2 {color: #2e9a4d; margin-bottom: 20px; font-size: 2rem; text-align: center;}
+    .counter {font-size: clamp(2rem, 8vw, 4rem); font-weight: 900; color: #2e9a4d; text-align: center; margin: 20px 0;}
+    ul {padding-left: 20px; max-width: 800px; margin: 0 auto;}
+    li {margin: 12px 0; font-size: 1.1rem; position: relative; padding-left: 10px;}
+    li::before {content: '✨'; position: absolute; left: 0; color: #ffd700;}
+    footer {background: linear-gradient(135deg, #003366, #2e9a4d); color: white; text-align: center; padding: 30px; margin-top: 60px;}
+    footer a {color: #ffd700; text-decoration: none;}
+    @media (max-width: 768px) {.btn {margin: 10px 5px; padding: 15px 30px; font-size: 1.1rem;}}
   </style>
 </head>
 <body>
 
-<header>
-  <div class="logo-container">
-    <a href="/">
-      <img src="images/logo1.png" alt="TichaAfrica Logo">
-    </a>
-    <div class="slogan">Teach Smart. Lead Change.</div>
-  </div>
-  <nav>
-    <a href="#why">Why</a>
-    <a href="#alliance">Alliance</a>
-    <a href="#partners">Partners</a>
-    <a href="#newsletter">Newsletter</a>
-  </nav>
-</header>
-
-<section class="hero" data-animate>
-  <h2>AI Education for Teachers</h2>
-  <p>TichaAfrica puts teachers at the centre of AI education. Africa’s first teacher-led, mobile-first AI training platform — built by teachers, for teachers.</p>
-  <a href="https://tally.so/r/3jrJG9" class="btn">Share Your Insights</a>
-  <a href="alliance.html" class="btn">Join the Alliance</a>
-  <img src="images/hero4.jpg" alt="TichaAfrica Hero">
-</section>
-
-<section id="why" data-animate>
-  <h3>Why This Matters</h3>
-  <p><strong>Teachers in Exodus:</strong> Many African teachers are leaving the continent in search of better pay and conditions. Without them, classrooms risk losing their most vital resource.</p>
-  <p><strong>Digital Divide:</strong> Most teachers, especially in rural areas, lack AI training and digital literacy.</p>
-  <p><strong>Outdated Learning Models:</strong> Rote memorisation dominates, while creativity and problem-solving remain stifled.</p>
-  <p><strong>Wasted Teacher Talent:</strong> Daily classroom innovations remain invisible, undocumented, and unsupported.</p>
-  <p><strong>Youth Employment Crisis:</strong> Africa’s growing youth population cannot thrive without AI-ready teachers.</p>
-  <p><em>The risk is clear: if teachers don’t lead this transformation, Africa’s classrooms will be shaped by someone else’s vision.</em></p>
-</section>
-
-<section id="alliance" data-animate>
-  <h3>Founding Teacher Alliance</h3>
-  <p>Be one of the first 200 teachers to shape Africa’s AI curriculum, guided by UNESCO’s AI Competency Framework and the African Union Continental AI Strategy.</p>
-  <div class="alliance-benefits">
-    <div class="benefit-card">🌟 Recognition as a Founding Teacher</div>
-    <div class="benefit-card">📘 Early access to AI training modules</div>
-    <div class="benefit-card">🗣️ Influence policies and classroom tools</div>
-  </div>
-  <p><em>Your voice today will shape the future for generations of learners.</em></p>
-  <a href="alliance.html" class="btn">Join the Alliance</a>
-</section>
-
-<section id="partners" data-animate>
-  <h3>Partner With Us</h3>
-  <p>Are you an EdTech innovator, NGO, policymaker, or global organisation? Partner with TichaAfrica to co-create tools, test solutions, and scale impact across Africa’s classrooms.</p>
-  <a href="mailto:partner@tichaafrica.com" class="btn">Let’s Collaborate</a>
-</section>
-
-<section id="newsletter" data-animate>
-  <h3>Stay Updated</h3>
-  <p>Don’t miss the stories, insights, and breakthroughs from Africa’s AI classrooms.</p>
-  <p>Subscribe to our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
-</section>
-
-<footer>
-  <p>Contact: <a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a></p>
-  <p>© 2025 TichaAfrica – Human-First AI for Education</p>
-</footer>
-
-<!-- Floating buttons -->
-<div class="floating-buttons">
-  <a href="https://tally.so/r/3jrJG9">📝 Share Insights</a>
-  <a href="alliance.html">🤝 Join Alliance</a>
+<div class="urgency animate__animated animate__pulse">
+  🚀 The First 10,000 Teachers Will Shape Africa’s AI Future — Join Now!
 </div>
 
-<script>
-  // Animation on scroll
-  const sections = document.querySelectorAll("section[data-animate]");
-  const reveal = () => {
-    sections.forEach(sec => {
-      const top = sec.getBoundingClientRect().top;
-      if (top < window.innerHeight - 100) {
-        sec.classList.add("visible");
-      }
-    });
-  };
-  window.addEventListener("scroll", reveal);
-  window.addEventListener("load", reveal);
-</script>
+<header data-aos="fade-down">
+  <img src="images/logo1.png" alt="TichaAfrica" data-aos="zoom-in">
+</header>
 
+<div class="hero">
+  <h1 data-aos="fade-down" data-aos-duration="1000">African Teachers Are Rising<br>to Lead the AI Revolution</h1>
+  <p data-aos="fade-up" data-aos-delay="300" style="font-size:1.3rem; max-width:600px; margin:0 auto 20px;">The continent’s first teacher-led, mobile-first AI training movement — built by teachers, for teachers.</p>
+  <div class="motto" data-aos="zoom-in" data-aos-delay="600">Teach Smart, Lead Change</div>
+  <div data-aos="fade-up" data-aos-delay="900">
+    <a href="YOUR_ALLIANCE_FORM_LINK" class="btn">Join Free Now (60s)</a>
+    <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Insights (2min)</a>
+  </div>
+</div>
+
+<section data-aos="fade-up">
+  <h2>Founding Teachers So Far</h2>
+  <div class="counter" id="counter">0</div>
+  <p style="text-align:center; font-size:1.2rem; color:#666;">...and growing every hour. Be next!</p>
+  <script>
+    // Animated counter — update 'target' to your real number (e.g., from form responses)
+    let count = 0;
+    const target = 1247; // Change this!
+    const duration = 2000; // 2 seconds animation
+    const increment = target / (duration / 16);
+    const startTime = Date.now();
+    function updateCounter() {
+      const elapsed = Date.now() - startTime;
+      count = Math.min(elapsed * increment, target);
+      document.getElementById('counter').innerText = Math.floor(count).toLocaleString();
+      if (count < target) requestAnimationFrame(updateCounter);
+    }
+    updateCounter();
+  </script>
+</section>
+
+<section data-aos="fade-right">
+  <h2>The Problem</h2>
+  <p style="font-size:1.2rem; text-align:center; max-width:700px; margin:0 auto 30px;">Foreign AI tools are flooding African classrooms. They ignore our languages, cultures, and realities. <strong>They were designed without a single African teacher in the room.</strong></p>
+  <p style="text-align:center; font-size:1.4rem; font-weight:bold; color:#2e9a4d;">That future ends now.</p>
+</section>
+
+<section data-aos="fade-left">
+  <h2>The Solution — Led by You</h2>
+  <p style="font-size:1.2rem; text-align:center; max-width:700px; margin:0 auto 30px;">We are building the first truly African AI curriculum and tools, together:</p>
+  <ul>
+    <li>100% teacher-led from day one</li>
+    <li>Mobile-first — works on any phone, any network</li>
+    <li>Free core training forever</li>
+    <li>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
+    <li>Fully aligned with African Union Continental AI Strategy</li>
+  </ul>
+  <div style="text-align:center; margin-top:30px;">
+    <div class="motto">Teach Smart, Lead Change</div>
+  </div>
+</section>
+
+<section data-aos="fade-up">
+  <h2>What Founding Teachers Gain</h2>
+  <ul>
+    <li>Shape the curriculum and tools used by millions of African learners</li>
+    <li>Exclusive Founding Teacher digital badge & certificate</li>
+    <li>Direct mentorship and collaboration with teachers across 54 countries</li>
+    <li>Early access to new AI teaching tools before anyone else</li>
+    <li>Be recognised by UNESCO, African Union, and global partners</li>
+    <li>Leave a legacy: your name in the history of African education</li>
+  </ul>
+</section>
+
+<section style="text-align:center; background: linear-gradient(135deg, #003366, #2e9a4d); color:white; border-radius:20px; margin:60px auto; padding:50px;" data-aos="zoom-in">
+  <h2 style="color:#ffd700; font-size:2.5rem;">The First 10,000 Teachers Own This Movement</h2>
+  <p style="font-size:1.3rem; max-width:600px; margin:20px auto;">After that, the Founding Alliance closes forever.</p>
+  <a href="YOUR_ALLIANCE_FORM_LINK" class="btn" style="background:#ffd700; color:#003366; font-size:1.4rem; padding:20px 50px; display:inline-block;">
+    Yes, I’m In — Claim My Spot Now
+  </a>
+</section>
+
+<footer data-aos="fade-up">
+  <p>TichaAfrica © 2025 • <strong>Teach Smart, Lead Change</strong></p>
+  <p><a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a> • WhatsApp • Instagram • X • LinkedIn</p>
+</footer>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init({once:true, duration:1200, offset:100});</script>
 </body>
 </html>
